# aristowrap

./: .dockerignore  .gitignore  AristotleDckr.lean  Aristowrap.lean  Dockerfile  README.md  aristotle.env.example  docker-compose.yml  lake-manifest.json  lakefile.toml  pyproject.toml
.github/workflows/: docker-image.yml  docker.yml
docs/: harmonic-integration.md
scripts/: __init__.py  aristowrap.py
tests/: __init__.py  test_aristowrap.py
