[project]
name = "aristowrap"
version = "0.1.0"
description = "Thin wrapper around Harmonic's aristotle CLI: essential-only project staging, submit, and verify via lake build."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aristowrap = "scripts.aristowrap:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
